--- a/src/app/features/cursos/formulario-cursos/formulario-cursos.component.html
+++ b/src/app/features/cursos/formulario-cursos/formulario-cursos.component.html
@@ -266,7 +266,7 @@
               </button>
               <button
                 mat-button
-                (click)="agregarUsuario(formulario.value)"
+                (click)="agregar(formulario.value)"
                 class="inline-block px-6 py-2.5 bg-primary-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-primary-700 hover:shadow-lg focus:bg-primary-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-secondary-500 active:shadow-lg transition duration-150 ease-in-out cursor-pointer disabled:cursor-not-allowed disabled:opacity-75"
                 [disabled]="formulario.invalid"
               >
