--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -1,5 +1,7 @@
-<nav class="flex items-center justify-between flex-wrap bg-primary-900 p-3 dark:bg-default-900">
-  <mat-toolbar class=" bg-primary-900 dark:bg-default-900">
+<nav
+  class="flex items-center justify-between flex-wrap bg-primary-900 p-3 dark:bg-default-900"
+>
+  <mat-toolbar class="bg-primary-900 dark:bg-default-900">
     <mat-toolbar-row class="p-0">
       <button
         type="button"
@@ -43,33 +45,49 @@
           >
             Inscripciones
           </button>
-          <button
-            mat-button
-            class="hidden lg:inline-block hover:text-primary-50"
-            (click)="navegarA('usuarios')"
-          >
-            Usuarios
-          </button>
+          <span appRolesPermitidos [roles]="[roles.ADMIN]">
+            <button
+              mat-button
+              class="hidden lg:inline-block hover:text-primary-50"
+              (click)="navegarA('usuarios')"
+            >
+              Usuarios
+            </button>
+          </span>
         </div>
         <div>
-          <div class="flex justify-center" *ngIf="(usuarioLogueadoPromise | async)">
+          <div
+            class="flex justify-center"
+            *ngIf="usuarioLogueadoPromise | async"
+          >
             <button
               mat-icon-button
               [matMenuTriggerFor]="menu"
               aria-label="Example icon-button with a menu"
             >
-              <app-avatar [imagen]="(usuarioLogueadoPromise | async)?.imagen"></app-avatar>
+              <app-avatar
+                [imagen]="(usuarioLogueadoPromise | async)?.imagen"
+              ></app-avatar>
             </button>
             <mat-menu #menu="matMenu">
               <!-- <span>{{(usuarioLogueadoPromise | async)?.nombre }}</span>
               <span>{{(usuarioLogueadoPromise | async)?.rol }}</span> -->
-              <div class="py-3 px-4 text-center divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600">
-                <span class="block text-sm text-gray-900 dark:text-white">{{(usuarioLogueadoPromise | async)?.nombre | nombreApellido: (usuarioLogueadoPromise | async)?.apellido:"apellido" }}</span>
-                <span class="block text-sm font-medium text-gray-500 truncate dark:text-gray-400">{{(usuarioLogueadoPromise | async)?.rol | uppercase}}</span>
+              <div
+                class="py-3 px-4 text-center divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600"
+              >
+                <span class="block text-sm text-gray-900 dark:text-white">{{
+                  (usuarioLogueadoPromise | async)?.nombre
+                    | nombreApellido
+                      : (usuarioLogueadoPromise | async)?.apellido
+                      : "apellido"
+                }}</span>
+                <span
+                  class="block text-sm font-medium text-gray-500 truncate dark:text-gray-400"
+                  >{{ (usuarioLogueadoPromise | async)?.rol | uppercase }}</span
+                >
               </div>
 
-              <button mat-menu-item
-              (click)="editarPerfil()">
+              <button mat-menu-item (click)="editarPerfil()">
                 <mat-icon>badge</mat-icon>
                 <span>Perfil</span>
               </button>
@@ -77,16 +95,28 @@
                 <mat-icon>key</mat-icon>
                 <span>Contraeñas</span>
               </button>
-              <button mat-menu-item>
+              <button mat-menu-item (click)="salir()">
                 <mat-icon>close</mat-icon>
                 <span>Salir</span>
               </button>
             </mat-menu>
-            <button mat-icon-button class="text-white" aria-label="Example icon-button with share icon"
-              [matTooltip]="currentTheme.themeMode === ThemeMode.DARK ? 'Cambiar a modo claro' : 'Cambiar a modo oscuro'"
-              (click)="changeThemeMode(currentTheme.themeMode)">
+            <button
+              mat-icon-button
+              class="text-white"
+              aria-label="Example icon-button with share icon"
+              [matTooltip]="
+                currentTheme.themeMode === ThemeMode.DARK
+                  ? 'Cambiar a modo claro'
+                  : 'Cambiar a modo oscuro'
+              "
+              (click)="changeThemeMode(currentTheme.themeMode)"
+            >
               <mat-icon class="text-white-600 dark:text-yellow-500">
-                {{ currentTheme.themeMode === ThemeMode.DARK ? 'light_mode' : 'dark_mode' }}
+                {{
+                  currentTheme.themeMode === ThemeMode.DARK
+                    ? "light_mode"
+                    : "dark_mode"
+                }}
               </mat-icon>
             </button>
           </div>
